<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EditProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/MaterialAlertDialog.Material3.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/r_n_d_zenle"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/deleteProductButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/r_n_sil" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/r_n_ad">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/r_n_al_fiyat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productGetPriceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/r_n_sat_fiyat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productSellPriceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/r_n_a_klama">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/stok_adedi">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productStockEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/sat_c_ad">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productSellerNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/sat_c_telefon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productSellerNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/r_n_barkodu">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productBarcodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/productImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:contentDescription="@string/kaydol" />

        <Button
            android:id="@+id/addProductImageButton"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/r_n_resmi_de_i_tir"
            app:icon="@drawable/outline_add_a_photo_24" />

        <Button
            android:id="@+id/addProductButton"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:text="@string/kaydet"
            app:icon="@drawable/baseline_cloud_upload_24" />

    </LinearLayout>


</ScrollView>
